--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevFreelaCs": "Server=(localdb)\\mssqllocaldb;Database=DevFreela;Trusted_Connection=true;"
+  }
 }
