--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevFreelaCs": "Server=(localdb)\\mssqllocaldb;Database=DevFreela;Trusted_Connection=true;"
+  },
+  "Jwt": {
+    "Key": "Esta É Minha Senha Secreta Para Proteger Meus Tokens!",
+    "Issuer": "DevFreela",
+    "Audience":  "ClientFleelancers"
   }
 }
